Various scripts for fine tuning

--- a/dev/GarstecModel_V8/V8ResidualPlot.ipynb
+++ b/dev/GarstecModel_V8/V8ResidualPlot.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss weights:  [29.10284923  2.65740197  3.15841458  2.43685795  1.63040211]\n"
+     ]
+    }
+   ],
+   "source": [
+    "std_devs = output_scaler.scale_\n",
+    "loss_weights = 1/std_devs\n",
+    "print(\"Loss weights: \",loss_weights)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,6 +364,8 @@
     }
    ],
    "source": [
+    "# Calculate residuals with scaler\n",
+    "\n",
     "# Check for CUDA availability\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
@@ -671,25 +692,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameter Median Values from Dataset:\n",
-      "----------------------------------------\n",
-      "Teff (K)             4953.89\n",
-      "Luminosity (L☉)      55.89\n",
-      "Δν (μHz)             3.97\n",
-      "ν_max (μHz)          0.01\n",
-      "[Fe/H] (dex)         -0.728\n"
+      "Parameter Statistics from Dataset:\n",
+      "--------------------------------------------------------------------------------\n",
+      "Parameter            Mean       Median     Min        Max        IQR        Std Dev   \n",
+      "--------------------------------------------------------------------------------\n",
+      "Teff (K)             4951.53 4953.89 3787.32 9803.10 497.04 409.86\n",
+      "Luminosity (L☉)      63.69 55.89 1.88 250.82 63.62 43.31\n",
+      "Δν (μHz)             6.62 3.97 1.87 41.10 4.69 6.78\n",
+      "ν_max (μHz)          0.02 0.01 0.00 0.25 0.02 0.03\n",
+      "[Fe/H] (dex)         -0.78 -0.73 -2.00 0.22 1.02 0.61\n"
      ]
     }
    ],
    "source": [
-    "def calculate_parameter_medians(original_test, original_pred):\n",
+    "import numpy as np\n",
+    "\n",
+    "def calculate_parameter_statistics(original_test, original_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate descriptive statistics for each parameter in the dataset.\n",
+    "\n",
+    "    Args:\n",
+    "        original_test (np.ndarray): The original test data (ground truth).\n",
+    "        original_pred (np.ndarray): The predicted data (model output).\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing statistics for each parameter.\n",
+    "    \"\"\"\n",
     "    # Convert log values back to linear scale for the first 4 parameters\n",
     "    normal_test = np.copy(original_test)\n",
     "    for i in range(4):  # teff, luminosity, dnu, numax\n",
@@ -698,22 +733,88 @@
     "    # Define parameter names\n",
     "    param_names = [\"Teff (K)\", \"Luminosity (L☉)\", \"Δν (μHz)\", \"ν_max (μHz)\", \"[Fe/H] (dex)\"]\n",
     "    \n",
-    "    # Calculate median for each parameter\n",
-    "    medians = np.median(normal_test, axis=0)\n",
+    "    # Initialize a dictionary to store statistics for each parameter\n",
+    "    statistics = {name: {} for name in param_names}\n",
+    "    \n",
+    "    # Calculate statistics for each parameter\n",
+    "    for i, name in enumerate(param_names):\n",
+    "        data = normal_test[:, i]\n",
+    "        \n",
+    "        # Basic statistics\n",
+    "        statistics[name]['mean'] = np.mean(data)\n",
+    "        statistics[name]['median'] = np.median(data)\n",
+    "        statistics[name]['min'] = np.min(data)\n",
+    "        statistics[name]['max'] = np.max(data)\n",
+    "        \n",
+    "        # Percentiles (25th, 75th for IQR)\n",
+    "        q25, q75 = np.percentile(data, [25, 75])\n",
+    "        statistics[name]['q25'] = q25\n",
+    "        statistics[name]['q75'] = q75\n",
+    "        statistics[name]['iqr'] = q75 - q25  # Interquartile range\n",
+    "        \n",
+    "        # Standard deviation\n",
+    "        statistics[name]['std_dev'] = np.std(data)\n",
     "    \n",
     "    # Print results in a formatted table\n",
-    "    print(\"Parameter Median Values from Dataset:\")\n",
-    "    print(\"-\" * 40)\n",
-    "    for name, median in zip(param_names, medians):\n",
-    "        if name == \"[Fe/H] (dex)\":\n",
-    "            print(f\"{name:<20} {median:.3f}\")\n",
-    "        else:\n",
-    "            print(f\"{name:<20} {median:.2f}\")\n",
+    "    print(\"Parameter Statistics from Dataset:\")\n",
+    "    print(\"-\" * 80)\n",
+    "    print(f\"{'Parameter':<20} {'Mean':<10} {'Median':<10} {'Min':<10} {'Max':<10} {'IQR':<10} {'Std Dev':<10}\")\n",
+    "    print(\"-\" * 80)\n",
+    "    for name in param_names:\n",
+    "        stats = statistics[name]\n",
+    "        print(f\"{name:<20} {stats['mean']:.2f} {stats['median']:.2f} {stats['min']:.2f} {stats['max']:.2f} {stats['iqr']:.2f} {stats['std_dev']:.2f}\")\n",
     "    \n",
-    "    return medians\n",
-    "\n",
+    "    return statistics\n",
+    "    \n",
     "# Call the function\n",
-    "median_values = calculate_parameter_medians(y_test_original, y_pred_original)"
+    "statistics = calculate_parameter_statistics(y_test_original, y_pred_original)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(inputs, outputs, test_size=0.2, random_state=1)\n",
+    "\n",
+    "# Initialize scalers\n",
+    "input_scaler = StandardScaler()\n",
+    "output_scaler = StandardScaler()\n",
+    "\n",
+    "# Fit scalers on training data and transform both training and testing data\n",
+    "X_train_scaled = input_scaler.fit_transform(X_train) # Fit AND transform train\n",
+    "X_test_scaled = input_scaler.transform(X_test)       # ONLY transform test\n",
+    "\n",
+    "y_train_scaled = output_scaler.fit_transform(y_train)\n",
+    "y_test_scaled = output_scaler.transform(y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized Weights: [1.17082309e-04 8.19576162e-02 8.19576162e-02 1.63915232e-02\n",
+      " 8.19576162e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Typical observation uncertainties\n",
+    "uncertainties = [70, 0.1, 0.1, 0.5, 0.01]\n",
+    "\n",
+    "# Calculate inverse uncertainties\n",
+    "inverse_uncertainties = 1 / np.array(uncertainties)\n",
+    "\n",
+    "# Normalize the weights\n",
+    "normalized_weights = inverse_uncertainties / np.sum(inverse_uncertainties)\n",
+    "\n",
+    "print(\"Normalized Weights:\", normalized_weights)"
    ]
   },
   {
