run working now

--- a/HBM stuff/Bayesian models/track_selector_hbm.ipynb
+++ b/HBM stuff/Bayesian models/track_selector_hbm.ipynb
@@ -23,27 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "track01624\n",
-      "track01640\n",
-      "track01975\n",
-      "track02584\n",
+      "track01239\n",
+      "track01336\n",
       "track04056\n",
+      "track05064\n",
       "track05847\n",
-      "track05944\n",
-      "track06984\n",
-      "track07032\n",
-      "track07783\n",
-      "track08023\n",
-      "track08968\n",
-      "track09016\n",
-      "Total selected tracks: 13\n",
+      "track06168\n",
+      "track09368\n",
+      "Total selected tracks: 7\n",
       "track10000\n"
      ]
     }
@@ -109,7 +103,13 @@
     "        else:\n",
     "            eta_value = 0  # Put outside of our desired range so it isn't selected\n",
     "\n",
-    "        if 0.8 < massini_value < 0.9 and 0.1 < alphaFe_value < 0.3 and 8000 < age_value < 12500 and  0.24 < yini_value < 0.3 and 0.1 < eta_value < 0.2:\n",
+    "        if 'alphaMLT' in track and track['alphaMLT'].size > 0:\n",
+    "            mlt_value = track['alphaMLT'][()][0]  # Get the first element if it exists\n",
+    "        else:\n",
+    "            mlt_value = 0  # Put outside of our desired range so it isn't selected\n",
+    "\n",
+    "\n",
+    "        if 0.8 < massini_value < 0.9 and 0.1 < alphaFe_value < 0.3 and 8000 < age_value < 12500 and  0.26 < yini_value < 0.3 and 0.0 < eta_value < 0.15 and 1.55 < mlt_value < 2.1:\n",
     "            selected_tracks.append(track)\n",
     "            print(track_name)\n",
     "            \n",
