--- a/Neural_Network/GARSTEC_Emulator/GarstecModel_V12/OutlierCheck.ipynb
+++ b/Neural_Network/GARSTEC_Emulator/GarstecModel_V12/OutlierCheck.ipynb
@@ -2,24 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
     "import random\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy import stats\n",
-    "import seaborn as sns\n",
     "import os\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from pytorch_lightning import LightningModule\n",
     "\n",
     "garstec_data = r'C:\\Users\\kiena\\Documents\\YEAR 4\\PROJECT\\Data\\Garstec_AS09_chiara.hdf5'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +99,190 @@
     "\n",
     "# Combine outputs\n",
     "outputs = np.hstack(output_arrays)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(inputs, outputs, test_size=0.2, random_state=1)\n",
+    "\n",
+    "# Scale data\n",
+    "input_scaler = StandardScaler()\n",
+    "output_scaler = StandardScaler()\n",
+    "\n",
+    "X_train_scaled = input_scaler.fit_transform(X_train)\n",
+    "X_test_scaled = input_scaler.transform(X_test)\n",
+    "\n",
+    "y_train_scaled = output_scaler.fit_transform(y_train)\n",
+    "y_test_scaled = output_scaler.transform(y_test)\n",
+    "\n",
+    "# Store scaler parameters\n",
+    "output_scaler_mean = output_scaler.mean_\n",
+    "output_scaler_scale = output_scaler.scale_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load trained model for inverse transform check\n",
+    "checkpoint_path = r\"best_model_noLog_v11---epoch=6008-val_loss=41.62628174.ckpt\"\n",
+    "\n",
+    "class GarstecNet(LightningModule):\n",
+    "    def __init__(self, input_dim, output_dim, output_scaler_mean, output_scaler_scale):\n",
+    "        super().__init__()\n",
+    "        self.model = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(input_dim, 512),\n",
+    "            torch.nn.LeakyReLU(),\n",
+    "            torch.nn.Linear(512, 256),\n",
+    "            torch.nn.LeakyReLU(),\n",
+    "            torch.nn.Linear(256, 128),\n",
+    "            torch.nn.LeakyReLU(),\n",
+    "            torch.nn.Linear(128, 64),\n",
+    "            torch.nn.LeakyReLU(),\n",
+    "            torch.nn.Linear(64, 32),\n",
+    "            torch.nn.LeakyReLU(),\n",
+    "            torch.nn.Linear(32, output_dim)\n",
+    "        )\n",
+    "        self.register_buffer('output_mean', torch.tensor(output_scaler_mean, dtype=torch.float32))\n",
+    "        self.register_buffer('output_scale', torch.tensor(output_scaler_scale, dtype=torch.float32))\n",
+    "\n",
+    "    def inverse_transform(self, scaled_tensor):\n",
+    "        # Ensure the tensor is on the same device as the stored buffers\n",
+    "        return scaled_tensor.to(self.output_scale.device) * self.output_scale + self.output_mean\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Load the model\n",
+    "model = GarstecNet.load_from_checkpoint(\n",
+    "    checkpoint_path, \n",
+    "    input_dim=X_train.shape[1], \n",
+    "    output_dim=y_train.shape[1], \n",
+    "    output_scaler_mean=output_scaler_mean,\n",
+    "    output_scaler_scale=output_scaler_scale\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output Scaler Mean:\n",
+      " [ 4.95140313e+03  6.36342333e+01  6.63054326e+00  2.33001172e-02\n",
+      " -7.78173600e-01]\n",
+      "Output Scaler Scale:\n",
+      " [4.10161448e+02 4.32854629e+01 6.79452131e+00 3.29864457e-02\n",
+      " 6.13345625e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check stored scaler parameters\n",
+    "print(\"Output Scaler Mean:\\n\", output_scaler.mean_)\n",
+    "print(\"Output Scaler Scale:\\n\", output_scaler.scale_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Absolute Difference:  0.0008871249992807861\n",
+      "Mean Absolute Difference:  4.002819973301082e-05\n",
+      "Max Relative Difference:  0.006157867241702994\n",
+      "Mean Relative Difference:  1.2025641625345485e-07\n",
+      "Feature 0: Checking log transform reversibility\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kiena\\AppData\\Local\\Temp\\ipykernel_14868\\2688079443.py:27: RuntimeWarning: overflow encountered in power\n",
+      "  model_recovered = 10 ** y_test_unscaled_model[:, i]\n",
+      "C:\\Users\\kiena\\AppData\\Local\\Temp\\ipykernel_14868\\2688079443.py:28: RuntimeWarning: overflow encountered in power\n",
+      "  manual_recovered = 10 ** y_test_unscaled_manual[:, i]\n",
+      "C:\\Users\\kiena\\AppData\\Local\\Temp\\ipykernel_14868\\2688079443.py:30: RuntimeWarning: invalid value encountered in subtract\n",
+      "  log_abs_diff = np.abs(model_recovered - manual_recovered)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Max Absolute Log-Difference: nan\n",
+      "  Mean Absolute Log-Difference: nan\n",
+      "  Max Relative Log-Difference: nan\n",
+      "  Mean Relative Log-Difference: nan\n",
+      "Feature 1: Checking log transform reversibility\n",
+      "  Max Absolute Log-Difference: inf\n",
+      "  Mean Absolute Log-Difference: inf\n",
+      "  Max Relative Log-Difference: inf\n",
+      "  Mean Relative Log-Difference: inf\n",
+      "Feature 2: Checking log transform reversibility\n",
+      "  Max Absolute Log-Difference: inf\n",
+      "  Mean Absolute Log-Difference: inf\n",
+      "  Max Relative Log-Difference: inf\n",
+      "  Mean Relative Log-Difference: inf\n",
+      "Feature 3: Checking log transform reversibility\n",
+      "  Max Absolute Log-Difference: 1.2243287828006544e-07\n",
+      "  Mean Absolute Log-Difference: 3.00580756901602e-08\n",
+      "  Max Relative Log-Difference: 7.576130627521522e-08\n",
+      "  Mean Relative Log-Difference: 2.852428749383892e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Move model to correct device\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Ensure input tensor is on the same device\n",
+    "y_test_scaled_tensor = torch.tensor(y_test_scaled, dtype=torch.float32).to(device)\n",
+    "\n",
+    "# Now it should work without a device mismatch error\n",
+    "y_test_unscaled_model = model.inverse_transform(y_test_scaled_tensor).detach().cpu().numpy()\n",
+    "\n",
+    "y_test_unscaled_manual = y_test_scaled * output_scaler.scale_ + output_scaler.mean_\n",
+    "\n",
+    "# Compute absolute and relative differences\n",
+    "abs_diff = np.abs(y_test_unscaled_model - y_test_unscaled_manual)\n",
+    "rel_diff = abs_diff / (np.abs(y_test_unscaled_manual) + 1e-10)  # Small epsilon to avoid division by zero\n",
+    "\n",
+    "# Print summary statistics\n",
+    "print(\"Max Absolute Difference: \", np.max(abs_diff))\n",
+    "print(\"Mean Absolute Difference: \", np.mean(abs_diff))\n",
+    "print(\"Max Relative Difference: \", np.max(rel_diff))\n",
+    "print(\"Mean Relative Difference: \", np.mean(rel_diff))\n",
+    "\n",
+    "# Check log-transformed values (first 4 columns)\n",
+    "for i in range(4):  \n",
+    "    print(f\"Feature {i}: Checking log transform reversibility\")\n",
+    "    model_recovered = 10 ** y_test_unscaled_model[:, i]\n",
+    "    manual_recovered = 10 ** y_test_unscaled_manual[:, i]\n",
+    "    \n",
+    "    log_abs_diff = np.abs(model_recovered - manual_recovered)\n",
+    "    log_rel_diff = log_abs_diff / (np.abs(manual_recovered) + 1e-10)\n",
+    "\n",
+    "    print(f\"  Max Absolute Log-Difference: {np.max(log_abs_diff)}\")\n",
+    "    print(f\"  Mean Absolute Log-Difference: {np.mean(log_abs_diff)}\")\n",
+    "    print(f\"  Max Relative Log-Difference: {np.max(log_rel_diff)}\")\n",
+    "    print(f\"  Mean Relative Log-Difference: {np.mean(log_rel_diff)}\")"
    ]
   },
   {
